--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,5 +34,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        #- { path: ^/profile, roles: ROLE_USER }   
+        - { path: ^/client, roles: ROLE_CLIENT }
+        - { path: ^/artisan, roles: ROLE_ARTISAN }
+
