--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ APP_SECRET=dfa06515dd8101fd1b7b9dc587430019
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root:@127.0.0.1:3306/pidev"
+ DATABASE_URL="mysql://root:@127.0.0.1:3306/pidev2"
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
