--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=dfa06515dd8101fd1b7b9dc587430019
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
- MAILER_DSN=smtp://29317614a33f8d:da2e383213e801@smtp.mailtrap.io:2525
+# MAILER_DSN=smtp://29317614a33f8d:da2e383213e801@smtp.mailtrap.io:2525
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -36,3 +36,15 @@ APP_SECRET=dfa06515dd8101fd1b7b9dc587430019
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_DSN=gmail://machaine46@gmail.com:sanewbar@localhost
+###< symfony/swiftmailer-bundle ###
