--- a/.env
+++ b/.env
@@ -29,6 +29,14 @@ APP_SECRET=dfa06515dd8101fd1b7b9dc587430019
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root:@127.0.0.1:3306/pidev"
+ DATABASE_URL="mysql://root:@127.0.0.1:3306/pidev9999"
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
+MAILER_URL=gmail://bazdeh.mustapha@esprit.tn:191JMT2049@localhost
