--- a/.env
+++ b/.env
@@ -24,11 +24,11 @@ APP_SECRET=dfa06515dd8101fd1b7b9dc587430019
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-<<<<<<< Updated upstream
- DATABASE_URL="mysql://root:@127.0.0.1:3306/pidev"
-=======
+
+ #DATABASE_URL="mysql://root:@127.0.0.1:3306/pidev"
+
  DATABASE_URL="mysql://root:@127.0.0.1:3306/pidev4"
->>>>>>> Stashed changes
+
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
@@ -38,6 +38,7 @@ APP_SECRET=dfa06515dd8101fd1b7b9dc587430019
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=gmail://mostfa.wrad@gmail.com:taraji19ss4@localhost
 
+MAILER_DSN=gmail://machaine46@gmail.com:sanewbar@localhost
 
 
 ###< symfony/swiftmailer-bundle ###
