--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": ">=7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "captcha-com/symfony-captcha-bundle": "4.*",
         "doctrine/annotations": "^1.0",
         "doctrine/dbal": "^3.3",
         "doctrine/doctrine-bundle": "^2.5",
@@ -24,6 +25,7 @@
         "symfony/framework-bundle": "4.4.*",
         "symfony/http-client": "4.4.*",
         "symfony/intl": "4.4.*",
+        "symfony/mailer": "4.4.*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/process": "4.4.*",
         "symfony/property-access": "4.4.*",
@@ -38,7 +40,8 @@
         "symfony/web-link": "4.4.*",
         "symfony/web-server-bundle": "4.4.*",
         "symfony/yaml": "4.4.*",
-        "symfonycasts/verify-email-bundle": "^1.8",
+        "symfonycasts/reset-password-bundle": "^1.13",
+        "symfonycasts/verify-email-bundle": "^1.9",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
         "twilio/sdk": "^6.35",
