--- a/.env
+++ b/.env
@@ -20,8 +20,8 @@ APP_SECRET=dfa06515dd8101fd1b7b9dc587430019
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
 
-###> symfony/mailer ###
- MAILER_DSN=smtp://29317614a33f8d:da2e383213e801@smtp.mailtrap.io:2525
+###> symfony/mailer ###"
+ MAILER_DSN=smtp://29317614a33f"8d:da2e383213e801@smtp.mailtrap.io:2525
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -36,3 +36,10 @@ APP_SECRET=dfa06515dd8101fd1b7b9dc587430019
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=gmail://yasmine.triki@esprit.tn:213JFT3644@localhost?encryption=tls&auth_mode=oauth
+###< symfony/swiftmailer-bundle ###
